# maud_tailwind_htmx_axum_sqlx_postgres

./: .env.example  .gitmodules  CLAUDE.md  Cargo.toml  README.md  justfile
.serena/: project.yml
.serena/memories/: project_overview.md  suggested_commands.md  task_completion.md
src/: auth.rs  config.rs  constants.rs  db.rs  email.rs  email_templates.rs  formatting.rs  main.rs  paths.rs  session_store.rs  validation.rs
src/auth/: current_user.rs  mod.rs  service.rs  token.rs
src/data/: errors.rs  mod.rs
src/data/commands/: admin.rs  magic_link.rs  order.rs  todo.rs  user.rs
src/data/queries/: admin.rs  mod.rs  order.rs  shared.rs  todo.rs  user.rs
src/email/: config.rs  mod.rs  templates.rs
src/handlers/: errors.rs  fallback.rs  htmx.rs  mod.rs
src/handlers/actions/: auth.rs  mod.rs  payment.rs  sign_out.rs  todo.rs  todos.rs
src/handlers/actions/admin/: mod.rs  revoke_role.rs
src/handlers/forms/: contact.rs  mod.rs  sign_in.rs  text_analyzer.rs  todo.rs  todos.rs
src/handlers/forms/admin/: grant_role.rs  mod.rs
src/handlers/pages/: checkout.rs  dashboard.rs  mod.rs  payment_confirmation.rs  quote.rs  result.rs  root.rs  sign_in.rs  text_analyzer.rs  todos.rs
src/handlers/pages/admin/: home.rs  order_detail.rs  orders.rs  user_detail.rs  users.rs
src/init/: database.rs  mod.rs  schema.rs  session.rs
src/middlewares/: auth.rs  mod.rs  security_headers.rs  session.rs
src/models/: admin.rs  contact.rs  ids.rs  mod.rs  order.rs  order_number.rs  pagination.rs  role.rs  sign_in.rs  todo.rs  user.rs
src/routes/: actions.rs  admin.rs  forms.rs  mod.rs  pages.rs
src/session/: flash.rs  mod.rs
src/views/: helpers.rs  mod.rs  response.rs
src/views/components/: flash.rs  form.rs
src/views/components/admin/: mod.rs  order_row.rs  pagination.rs
src/views/layout/: base.rs
src/views/pages/: checkout.rs  dashboard.rs  mod.rs  not_found.rs  payment_confirmation.rs  quote.rs  root.rs  server_error.rs  sign_in.rs  text_analyzer.rs  todos.rs
src/views/pages/admin/: home.rs  order_detail.rs  orders.rs  user_detail.rs  users.rs
