[package]
name = "axum_surreal_template"
version = "0.1.0"
edition = "2024"

[dependencies]
# ============================================================================
# Async Runtime
# ============================================================================
tokio = { version = "1.49.0", features = ["full"] }

# ============================================================================
# Web Framework
# ============================================================================
axum = { version = "0.8.8", features = ["macros", "multipart"] }
maud = { version = "0.27.0", features = ["axum"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
tower-sessions = "0.14.0"

# ============================================================================
# Database
# ============================================================================
chrono = { version = "0.4.43", features = ["serde"] }
surrealdb = { version = "2", features = ["kv-mem", "kv-surrealkv"] }
time = "0.3.46"
uuid = { version = "1.20.0", features = ["v4", "serde"] }

# ============================================================================
# Serialization
# ============================================================================
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# ============================================================================
# Security & Validation
# ============================================================================
base64 = "0.22.1"
rand = "0.9.2"
validator = { version = "0.20.0", features = ["derive"] }

# ============================================================================
# HTTP Client (Payment Gateway)
# ============================================================================
reqwest = { version = "0.13.1", default-features = false, features = ["json", "rustls"] }

# ============================================================================
# Email
# ============================================================================
lettre = { version = "0.11.19", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder", "hostname"] }

# ============================================================================
# Utilities
# ============================================================================
async-trait = "0.1.89"
dotenvy = "0.15.7"
regex = "1.12.2"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
urlencoding = "2.1.3"
